[package]
name = "home-detection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
time = "0.3.5"
aws-config = "*"
aws-sdk-sns = "*"
tokio = { version = "1", features = ["full"] }
rand = "*"
